--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 /*! normalize.css v3.0.0 | HTML5 Display Definitions | MIT License | git.io/normalize */
-/* line 9, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_html5.scss */
 article,
 aside,
 details,
@@ -16,7 +15,6 @@ summary {
   display: block;
 }
 
-/* line 29, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_html5.scss */
 audio,
 canvas,
 progress,
@@ -25,78 +23,65 @@ video {
   vertical-align: baseline;
 }
 
-/* line 40, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_html5.scss */
 audio:not([controls]) {
   display: none;
   height: 0;
 }
 
-/* line 47, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_html5.scss */
 [hidden],
 template {
   display: none;
 }
 
 /*! normalize.css v3.0.0 | Base | MIT License | git.io/normalize */
-/* line 11, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_base.scss */
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
 
-/* line 19, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_base.scss */
 body {
   margin: 0;
 }
 
 /*! normalize.css v3.0.0 | Links | MIT License | git.io/normalize */
-/* line 9, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_links.scss */
 a {
   background: transparent;
 }
 
-/* line 15, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_links.scss */
 a:active,
 a:hover {
   outline: 0;
 }
 
 /*! normalize.css v3.0.0 | Typography | MIT License | git.io/normalize */
-/* line 9, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_typography.scss */
 abbr[title] {
   border-bottom: 1px dotted;
 }
 
-/* line 15, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_typography.scss */
 b,
 strong {
   font-weight: bold;
 }
 
-/* line 22, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_typography.scss */
 dfn {
   font-style: italic;
 }
 
-/* line 29, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_typography.scss */
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
-/* line 36, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_typography.scss */
 mark {
   background: #ff0;
   color: #000;
 }
 
-/* line 43, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_typography.scss */
 small {
   font-size: 80%;
 }
 
-/* line 49, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_typography.scss */
 sub,
 sup {
   font-size: 75%;
@@ -105,46 +90,38 @@ sup {
   vertical-align: baseline;
 }
 
-/* line 57, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_typography.scss */
 sup {
   top: -0.5em;
 }
 
-/* line 61, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_typography.scss */
 sub {
   bottom: -0.25em;
 }
 
 /*! normalize.css v3.0.0 | Embedded Content | MIT License | git.io/normalize */
-/* line 9, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_embeds.scss */
 img {
   border: 0;
 }
 
-/* line 15, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_embeds.scss */
 svg:not(:root) {
   overflow: hidden;
 }
 
 /*! normalize.css v3.0.0 | Figures | MIT License | git.io/normalize */
-/* line 9, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_groups.scss */
 figure {
   margin: 1em 40px;
 }
 
-/* line 15, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_groups.scss */
 hr {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
 }
 
-/* line 23, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_groups.scss */
 pre {
   overflow: auto;
 }
 
-/* line 29, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_groups.scss */
 code,
 kbd,
 pre,
@@ -154,7 +131,6 @@ samp {
 }
 
 /*! normalize.css v3.0.0 | Forms | MIT License | git.io/normalize */
-/* line 15, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 button,
 input,
 optgroup,
@@ -165,18 +141,15 @@ textarea {
   margin: 0;
 }
 
-/* line 27, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 button {
   overflow: visible;
 }
 
-/* line 36, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 button,
 select {
   text-transform: none;
 }
 
-/* line 47, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -185,38 +158,32 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-/* line 57, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 button[disabled],
 html input[disabled] {
   cursor: default;
 }
 
-/* line 64, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
 
-/* line 73, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 input {
   line-height: normal;
 }
 
-/* line 83, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
 
-/* line 93, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
-/* line 102, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
   -moz-box-sizing: content-box;
@@ -224,49 +191,51 @@ input[type="search"] {
   box-sizing: content-box;
 }
 
-/* line 113, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-/* line 120, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
 
-/* line 129, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 legend {
   border: 0;
   padding: 0;
 }
 
-/* line 136, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 textarea {
   overflow: auto;
 }
 
-/* line 143, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
 optgroup {
   font-weight: bold;
 }
 
 /*! normalize.css v3.0.0 | Tables | MIT License | git.io/normalize */
-/* line 9, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_tables.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 14, ../../../../../../../.rvm/gems/ruby-2.1.1/gems/compass-normalize-1.5/stylesheets/normalize/_tables.scss */
 td,
 th {
   padding: 0;
 }
 
-/* line 35, ../compass/base/_base.scss */
+.mockup {
+  opacity: 0.8;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  text-align: center;
+  display: none;
+}
+
 .salad-list-number, .salad-list-content, .salad-list-date, .salad-list-thumbnail {
   display: block;
   position: absolute;
@@ -274,7 +243,6 @@ th {
   height: 100%;
 }
 
-/* line 42, ../compass/base/_base.scss */
 .salad-list-ingredients {
   display: block;
   position: absolute;
@@ -282,55 +250,83 @@ th {
   width: 100%;
 }
 
-/* line 49, ../compass/base/_base.scss */
-header, .hero-content, .salad-list-date, .salad-list-ingredients {
+.container, header, .salad-list-date, .salad-list-ingredients {
   padding: 25px;
 }
 
-/* line 66, ../compass/base/_base.scss */
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 70, ../compass/base/_base.scss */
 body {
   font-family: "adelle", georgia, serif;
   font-size: 14px;
   line-height: 1.428;
+  color: #322117;
 }
 
-/* line 76, ../compass/base/_base.scss */
-ul, ol {
-  list-style: none;
-  padding: 0;
+a {
+  color: #f1644a;
 }
 
-/* line 81, ../compass/base/_base.scss */
+small {
+  font-size: 0.5em;
+}
+
 img {
   max-width: 100%;
   height: auto;
 }
 
-/* line 86, ../compass/base/_base.scss */
 h1 {
-  font-weight: 100;
-  font-size: 3em;
+  font-weight: 300;
+  font-size: 4.75em;
+  margin: 0 0 0.5em 0;
+  line-height: 1;
+}
+h1 small {
+  top: -10px;
+  position: relative;
 }
 
-/* line 91, ../compass/base/_base.scss */
+h2 {
+  font-weight: 300;
+  letter-spacing: 3px;
+  margin: 0.5em 0;
+  line-height: 1;
+  font-size: 1.75em;
+  color: #9d542a;
+}
+
+h3 {
+  color: #322117;
+  font-size: 1.5em;
+  margin: 0 0 0.5em 0;
+  font-weight: 300;
+  line-height: 1;
+}
+
 p {
-  margin-bottom: 7.714px;
+  margin-bottom: 15.428px;
+  font-weight: 400;
 }
 
-/* line 101, ../compass/base/_base.scss */
+li {
+  font-weight: 400;
+}
+
 header {
-  background: #34450e;
+  background-color: #322117;
   width: 100%;
 }
 
-/* line 114, ../compass/base/_base.scss */
+.nav {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
 .nav li {
   display: inline-block;
   vertical-align: middle;
@@ -339,87 +335,133 @@ header {
   *display: inline;
   margin: 0 20px;
 }
-/* line 117, ../compass/base/_base.scss */
 .nav li a {
   color: white;
-  font-weight: 100;
-  font-size: 1;
+  font-weight: 400;
+  font-size: 1em;
   text-decoration: none;
 }
+.hero-content .nav li {
+  margin: 0 20px 0 0;
+}
+.hero-content .nav li a {
+  font-weight: 100;
+  color: #322117;
+  font-size: 2em;
+}
 
-/* line 132, ../compass/base/_base.scss */
 .section-hero {
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center top;
-  background-image: url("../img/hero-1.jpg");
-  -moz-background-size: contain;
-  -o-background-size: contain;
-  -webkit-background-size: contain;
-  background-size: contain;
   text-align: center;
-  color: white;
+  color: #322117;
+  position: relative;
 }
 
-/* line 149, ../compass/base/_base.scss */
 .hero-content {
-  position: relative;
-  height: 100%;
+  text-align: center;
+  padding-top: 40px;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  min-height: 230px;
+  position: relative;
+  background-color: white;
 }
-/* line 2, ../compass/base/utilities/_mixins.scss */
 .hero-content:before, .hero-content:after {
   display: table;
   content: "";
   line-height: 0;
 }
-/* line 6, ../compass/base/utilities/_mixins.scss */
 .hero-content:after {
   clear: both;
 }
 
-/* line 170, ../compass/base/_base.scss */
+.search-container {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  display: none;
+}
+
+.search {
+  background-color: #b8ce47;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  font-weight: 100;
+  padding: 15px 30px;
+  color: white;
+  font-size: 1.25em;
+}
+.search .fa {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.content-share {
+  max-width: 550px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.share-links {
+  padding: 0;
+}
+.share-links li {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  margin: 10px;
+}
+
+footer {
+  background-color: #322117;
+  padding: 15px;
+  width: 100%;
+}
+
+.salad {
+  background-color: black;
+}
+
+.pending {
+  background-color: black;
+}
+
 .salad-list {
   margin: 0;
   padding: 0;
+  background-color: #322117;
 }
-/* line 2, ../compass/base/utilities/_mixins.scss */
 .salad-list:before, .salad-list:after {
   display: table;
   content: "";
   line-height: 0;
 }
-/* line 6, ../compass/base/utilities/_mixins.scss */
 .salad-list:after {
   clear: both;
 }
-/* line 174, ../compass/base/_base.scss */
 .salad-list li {
   position: relative;
   list-style: none;
   overflow: hidden;
-  border-left: 1px solid #34450e;
-  border-bottom: 1px solid #34450e;
-  width: 25%;
+  border-left: 4px solid #322117;
+  border-bottom: 4px solid #322117;
+  width: 20%;
   float: left;
-  background-color: black;
 }
-/* line 183, ../compass/base/_base.scss */
 .salad-list li img {
   display: block;
 }
 
-/* line 189, ../compass/base/_base.scss */
 .salad-link-wrap {
   text-decoration: none;
   display: block;
   color: inherit;
 }
-/* line 194, ../compass/base/_base.scss */
 .salad-link-wrap:hover .salad-list-thumbnail {
   -moz-background-size: 125% auto;
   -o-background-size: 125% auto;
@@ -428,35 +470,29 @@ header {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   opacity: 0.5;
 }
-/* line 199, ../compass/base/_base.scss */
 .salad-link-wrap:hover .salad-list-number .number {
   color: white;
 }
-/* line 202, ../compass/base/_base.scss */
 .salad-link-wrap:hover .salad-list-number .circle {
   background-color: rgba(255, 255, 255, 0);
 }
-/* line 206, ../compass/base/_base.scss */
 .salad-link-wrap:hover .salad-list-content {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 213, ../compass/base/_base.scss */
 .salad-list-number {
   z-index: 10;
 }
-/* line 218, ../compass/base/_base.scss */
 .salad-list-number .number {
   -moz-transition: color 0.4s ease;
   -o-transition: color 0.4s ease;
   -webkit-transition: color 0.4s ease;
   transition: color 0.4s ease;
   line-height: 2.425em;
-  color: black;
+  color: #f1644a;
   font-weight: 100;
 }
-/* line 224, ../compass/base/_base.scss */
 .salad-list-number .circle {
   -moz-transition: background-color 0.2s ease;
   -o-transition: background-color 0.2s ease;
@@ -479,20 +515,17 @@ header {
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
-/* line 237, ../compass/base/_base.scss */
 .salad-list-number > span {
   width: 100%;
   height: 100%;
   text-align: center;
   display: table;
 }
-/* line 242, ../compass/base/_base.scss */
 .salad-list-number > span > span {
   display: table-cell;
   vertical-align: middle;
 }
 
-/* line 249, ../compass/base/_base.scss */
 .salad-list-content {
   -moz-transition: opacity 0.2s ease;
   -o-transition: opacity 0.2s ease;
@@ -506,19 +539,16 @@ header {
   opacity: 0;
 }
 
-/* line 260, ../compass/base/_base.scss */
 .salad-list-date {
   text-align: center;
   font-weight: 100;
 }
 
-/* line 267, ../compass/base/_base.scss */
 .salad-list-ingredients {
   text-align: center;
   font-weight: 100;
 }
 
-/* line 274, ../compass/base/_base.scss */
 .salad-list-thumbnail {
   transition-property: opacity, background-size;
   transition-duration: 0.1s, 0.2s;
@@ -534,4 +564,46 @@ header {
   background-position: center center;
 }
 
-/*# sourceMappingURL=main.css.map */
+.section-content {
+  background: white;
+}
+
+.content-ingredients {
+  max-width: 750px;
+  margin: 0 auto;
+}
+.content-ingredients:before, .content-ingredients:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.content-ingredients:after {
+  clear: both;
+}
+
+.content-recipe {
+  max-width: 550px;
+  margin: 0 auto;
+}
+.content-recipe h2 {
+  text-align: center;
+}
+
+.salad-photo {
+  width: 50%;
+  float: left;
+}
+
+.ingredients {
+  width: 50%;
+  float: left;
+}
+.ingredients ul {
+  padding-top: 0;
+  margin-top: 0;
+  list-style: none;
+}
+.ingredients li {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  padding: 5px 0;
+}
